--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>pizza</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/master.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
+    <title>Pizza</title>
   </head>
   <body>
-
+    <div class="container">
+      <h1>Pizza Shoppe</h1>
+      <form id="pizza" action="index.html" method="post">
+        <br>
+        <label>Size</label>
+        <select>
+          <option>Personallized</option>
+          <option>Small</option>
+          <option>Medium</option>
+          <option>Large</option>
+          <option>Jumbo</option>
+        </select>
+        <br><br>
+        <label>Toppings</label>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" name="topping" value="pepperoni">
+            Pepperoni
+          </label>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" name="topping" value="mushroom">
+            Mushrooms
+          </label>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" name="topping" value="pineapple">
+            Pineapple
+          </label>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" name="topping" value="olives">
+            Olives
+          </label>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" name="topping" value="chicken">
+            Chicken
+          </label>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" name="topping" value="spinach">
+            Spinach
+          </label>
+        </div>
+        <button type="submit" name="button">Order</button>
+      </form>
+    </div>
   </body>
 </html>
