Add base functionality.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <form id="pizza" action="index.html" method="post">
         <br>
         <label>Size</label>
-        <select>
+        <select id="size">
           <option>Personallized</option>
           <option>Small</option>
           <option>Medium</option>
@@ -60,6 +60,9 @@
         </div>
         <button type="submit" name="button">Order</button>
       </form>
+      <div class="output">
+
+      </div>
     </div>
   </body>
 </html>
