Add final functionality.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <br>
         <label>Size</label>
         <select id="size">
-          <option>Personallized</option>
-          <option>Small</option>
-          <option>Medium</option>
-          <option>Large</option>
-          <option>Jumbo</option>
+          <option value="1">Personallized</option>
+          <option value="2">Small</option>
+          <option value="3">Medium</option>
+          <option value="4">Large</option>
+          <option value="5">Jumbo</option>
         </select>
         <br><br>
         <label>Toppings</label>
