--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>Pizza Shoppe</h1>
-      <form id="pizza" action="index.html" method="post">
+      <h1 class="jumbotron">Pizza Shoppe</h1>
+      <form id="pizza" class="well" action="index.html" method="post">
         <br>
-        <label>Size</label>
+        <label><strong>Size</strong></label>
         <select id="size">
           <option value="1">Personallized</option>
           <option value="2">Small</option>
@@ -21,7 +21,7 @@
           <option value="5">Jumbo</option>
         </select>
         <br><br>
-        <label>Toppings</label>
+        <label><strong>Toppings</strong></label>
         <div class="checkbox">
           <label>
             <input type="checkbox" name="topping" value="pepperoni">
