--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <button type="submit" name="button">Order</button>
       </form>
-      <div class="output">
+      <div class="output well">
 
       </div>
     </div>
